# py-ch-api

./: .gitignore  README.md  pyproject.toml  setup.py
pychapi/: __init__.py  client.py  models.py
tests/: conftest.py  test_client.py
